# -urrency_converter_bot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: python-tests.yml
src_bot/: currency_bot.py  currency_service.py  main.py
test_bot/: test_currency_service.py
